# pyadvcourse_rj

./: LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/pyadvcourse_rj/: __init__.py  algos.py  newalgos.py
tests/: test_newalgos.py
