# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pyadvcourse_rj"
description = "demo package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "rado.janicek@gmail.com", name = "Rado Janicek" },
]
dynamic = ["version"]
dependencies = ['numpy']

[tool.hatch.version]
path = "src/pyadvcourse_rj/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/r-janicek/pyadvcourse_rj"
repository = "https://github.com/r-janicek/pyadvcourse_rj"
